<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".presentation.RegisterActivity">

    <ImageView
        android:id="@+id/register_activity_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_logo"
        android:tint="@color/white"/>

    <TextView
        android:id="@+id/register_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_activity_image"
        android:text="@string/register_title"
        android:textAllCaps="false"
        android:textSize="14pt"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_activity_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/register_activity_title"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:hintTextAppearance="@style/LoginHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textSize="8pt"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_activity_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/register_activity_fullname"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:hintTextAppearance="@style/LoginHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="8pt"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_activity_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/register_activity_email"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:hintTextAppearance="@style/LoginHintStyle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="8pt"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_activity_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        app:layout_constraintTop_toBottomOf="@+id/register_activity_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/border_button"
        android:text="@string/register_button"
        android:textAllCaps="true"
        android:textSize="8pt"
        android:textStyle="bold"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>