<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.LoginActivity">

    <ImageView
        android:id="@+id/login_activity_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_logo"
        android:tint="@color/white"/>

    <TextView
        android:id="@+id/login_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_image"
        android:text="@string/login_title"
        android:textAllCaps="true"
        android:textSize="14pt"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_activity_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_title"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:hintTextAppearance="@style/LoginHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="8pt"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_activity_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_email"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:hintTextAppearance="@style/LoginHintStyle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="8pt"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_activity_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/border_button"
        android:text="@string/login_button"
        android:textAllCaps="true"
        android:textSize="8pt"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <View
        android:id="@+id/login_activity_diagonal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_login"
        app:layout_constraintBottom_toBottomOf="@+id/login_activity_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/login_background"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/login_activity_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/pink"
        android:src="@drawable/ic_add_black_24dp"
        android:tint="@color/white"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_diagonal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/full_white"/>

</androidx.constraintlayout.widget.ConstraintLayout>